# personalized-podcast-platform

./: LICENSE  README.md
apps/listener-web-app/backend/: .firebaserc  .mise.toml  Dockerfile  README.md  docker-compose.dev.yml  firebase.json  firestore.rules  main.py  pyproject.toml  storage.rules
apps/listener-web-app/backend/ppp/: constants.py  logging.py  main.py  settings.py  tracing.py
apps/listener-web-app/backend/ppp/agents/concierge/: agent.py
apps/listener-web-app/backend/ppp/api/v1/: api.py
apps/listener-web-app/backend/ppp/api/v1/endpoints/: agents.py  (+8 more)
apps/listener-web-app/backend/ppp/firestore/: client.py
apps/listener-web-app/backend/ppp/mcp/: mcp.py
apps/listener-web-app/backend/ppp/mcp/endpoints/: google_oauth2.py  listener.py  listener_program.py  listener_program_segments.py  radio_casts.py
apps/listener-web-app/backend/ppp/models/: base.py  listener.py  listener_program.py  listener_program_segment.py  mail.py  program_broadcast_history.py  radio_cast.py
apps/listener-web-app/backend/ppp/schemas/: agents.py  base.py  day_of_week.py  listener.py  listener_program.py  listener_program_segment.py  program_broadcast_history.py  radio_cast.py
apps/listener-web-app/backend/ppp/services/: base.py  chat.py  listener.py  listener_program.py  listener_program_segment.py  mail.py  program_broadcast_history.py  radio.py  radio_cast.py  rss.py
apps/listener-web-app/backend/ppp/tasks/: api.py
apps/listener-web-app/backend/ppp/utils/: auth.py  create_sample_radio_casts.py  crypto.py  google_oauth2.py  httpx_auth.py  inspector.py  random_string.py
apps/listener-web-app/backend/tests/: conftest.py  test_api.py  test_podcast_audio.py  test_rss.py  test_rss_endpoint.py  test_schema.py  test_segment_schema.py
apps/listener-web-app/backend/workflows/: scheduled-generate-podcast.yaml
apps/radio-station/: .gitignore  Dockerfile  README.md  deploy_agent.py  main.py  pyproject.toml
apps/radio-station/.junie/: adk-docs.md  guidelines.md
apps/radio-station/radio_station/: adk_app.py  agent.py  constants.py  state_keys.py  tracing.py
apps/radio-station/radio_station/model/: base_model.py  listener.py  listener_program.py  listener_program_segment.py  music_plan.py  program_plan.py  radio_cast.py  talk_script.py
apps/radio-station/radio_station/sub_agents/: generate_radio_flow_agent.py
apps/radio-station/radio_station/sub_agents/composer/: __init__.py  agent.py  flow_agent.py  tools.py
apps/radio-station/radio_station/sub_agents/mastering/: agent.py
apps/radio-station/radio_station/sub_agents/news_letter_writer/: agent.py
apps/radio-station/radio_station/sub_agents/program_planner/: __init__.py  program_planner_agent.py
apps/radio-station/radio_station/sub_agents/recoder/: __init__.py  flow_agent.py  llm_recorder_agent.py  llm_tts_recorder_agent.py  recorder_agent.py
apps/radio-station/radio_station/sub_agents/researcher/: __init__.py  calendar_researcher_agent.py  flow_agent.py  gmail_researcher_agent.py  rss_researcher_agent.py  web_researcher_agent.py
apps/radio-station/radio_station/sub_agents/writer/: __init__.py  critic_agent.py  flow_agent.py  program_segment_writer_agent.py  reviser_agent.py
apps/radio-station/radio_station/tools/: geolocation_tool.py  gmail_tool.py  time.py  weather_tool.py
apps/radio-station/radio_station/utils/: agent_helpers.py  artifact.py  audio.py  env.py  instruction_provider.py  semaphore_parallel_agent.py
apps/radio-station/scripts/: deploy_run.sh
apps/radio-station/tests/integrations/: test_mastering_agent.py  test_program_planner_agent.py
apps/radio-station/tests/integrations/researcher/: test_flow_agent.py  test_rss_researcher_agent.py
apps/radio-station/tests/integrations/writer/: test_program_segment_writer_agent.py
apps/radio-station/tests/unittests/sub_agents/: test_generate_radio_flow_agent.py
(+83 files in other folders)
